test/expected/declare_c-c.out
declare x as class C
             ^
14: error: "class": unsupported type in C
